# rsn-game-qa

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  environment-linux.yml  environment.yml  package.json  pyproject.toml  requirements.txt  tsconfig.testbed.json  typedoc.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  review.yml
.opencode/agents/: business.md  sales-research.md  strategy.md
.opencode/commands/: biz.md
configs/games/: breakout-71.yaml  hextris.yaml  shapez.yaml
configs/training/: breakout-71.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/: conf.py  index.rst
docs/api/: capture.rst  env.rst  game_loader.rst  index.rst  oracles.rst  orchestrator.rst  perception.rst  platform.rst  reporting.rst
docs/specs/: breakout71_behavior.md  breakout71_env.md  breakout71_game.md  capture_and_input.md  game_loader.md  hextris_env.md  (+9 more)
documentation/: ROADMAP.md  TechnicalBackground.md  checklist.md
games/: __init__.py
scripts/: __init__.py  _smoke_utils.py  analyze_demo.py  analyze_training.py  auto_annotate.py  autonomous.sh  capture_dataset.py  debug_game_state.py  debug_pixel_loop.py  export_openvino.py  pre-commit  prepare_dataset.py  profile_capture.py  profile_step.py  remove_duplication.py  run_session.py  smoke_capture.py  smoke_launch.py  smoke_oracle.py  test.py  train.py  train_model.py  train_rl.py  train_v2.py  upload_to_roboflow.py  validate_model.py  verify_ball_release.py
src/: __init__.py  build_twin_dataset.py
tests/: __init__.py  conftest.py  test_analyze_demo.py  test_analyze_training.py  test_base_env.py  test_breakout_reward.py  test_browser_crash_recovery.py  test_capture.py  test_cnn_wrapper.py  test_demo_recorder.py  test_env.py  test_epsilon_greedy_wrapper.py  test_event_recorder.py  test_game_loader.py  test_game_over_detector.py  test_game_plugins.py  test_game_registry.py  test_hextris_env.py  test_hextris_loader.py  test_human_mode.py  test_integration.py  test_ltc_integration.py  test_ltc_policy.py  test_ltc_wrapper.py  test_oracles.py  test_orchestrator.py  test_perception.py  test_reporting.py  test_rnd_wrapper.py  test_savegame_injector.py  test_score_ocr.py  test_shapez_env.py  test_shapez_loader.py  test_training_pipeline.py
(+135 files in other folders)
