[project]
name = "rsn-game-qa"
version = "0.1.0a1"
description = "RL-driven autonomous game testing platform"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a live game instance (deselect with '-m \"not integration\"')",
]
addopts = "--cov=src --cov=games --cov-report=term-missing"

[tool.coverage.run]
source = ["src", "games"]

[tool.coverage.report]
show_missing = true
fail_under = 80
