[project]
name = "rsn-game-qa"
version = "0.1.0a1"
description = "RL-driven autonomous game testing platform"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a live game instance (deselect with '-m \"not integration\"')",
]
addopts = "--cov=src --cov=games --cov-report=term-missing"

[tool.coverage.run]
source = ["src", "games"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__"',
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (Python 3.12+)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM102",  # collapsible-if — nested ifs often clearer for complex conditions
    "SIM105",  # use contextlib.suppress — too noisy for cleanup code
    "SIM117",  # collapsible-with — nested with statements clearer in test patterns
    "UP038",   # non-pep604-isinstance — requires unsafe fix
    "RUF002",  # ambiguous unicode in docstrings — × and – are intentional
    "RUF012",  # mutable class default — false positives on dataclass-like patterns
]

[tool.ruff.lint.per-file-ignores]
"scripts/capture_dataset.py" = ["E402"]
"scripts/debug_pixel_loop.py" = ["E402"]
"scripts/profile_capture.py" = ["E402"]
"scripts/profile_step.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src", "games"]
